--- a/src/components/card-nota/style.css
+++ b/src/components/card-nota/style.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   background-color: var(--fundo-detalhes);
   border-radius: 4px;
-  flex-wrap: warp;
+  flex-wrap: wrap;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
   padding: 16px;
 }
